Fix Video Size on Smaller Devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3100,7 +3100,7 @@ input, select, textarea {
 			background-position: center center;
 			background-size: cover;
 			border-radius: 0;
-			display: block;
+			/*display: block;*/
 			position: relative;
 			width: 30em;
 		}
@@ -3116,6 +3116,7 @@ input, select, textarea {
 				background: rgba(49, 36, 80, 0.9);
 				height: 100%;
 				width: 100%;
+				min-height: 15em;
 			}
 
 			.spotlights > section > .image:before {
